package application.enums;

public enum MenuOptions {
	LISTAR,
	CADASTRAR,
	DELETAR,
	ADICIONAR,
	RETIRAR,
	SAIR
}
