@startuml
skinparam classAttributeIconSize 0
package model {
  package entities {
    class Product {
      - name : String
      - category : ProductCategory
      - price : Double
      + getProductInfo() : String
    }
    class Inventory {
      + addNewProductItem(productItem : ProductItem) : void
      + removeProductItem(productId : Integer) : void
      + erase() : void
      + stockIn(productId : Integer, quantity : Integer) : void
      + stockOutt(productId : Integer, quantity : Integer) :  void
      + showInvenotry() : void
    }
    class ProductItem {
      - id : Integer
      - product : Product
      - quantity : Integer
      - timeModified : DateTime
      + totalValue() : Double
      + getProductItemInfo() : String
      + productsOut(quantity : Integer) : void
      + productsIn(quantity : Integer) : void
    }
  }
  package services {
      class InventoryFileService {
      - filePath : String
      + loadData() : Inventory
      + saveData(inventory : Inventory) : void
    }
  }
  package enums <<enums>> {
    enum ProductCategory {
      ROUPA
      ELETRONICO
      ESCRITORIO
      COMIDA
      BEBIDA
      HIGIENE_PESSOAL
      LIVRO
    }
  }
}

package application {
  package application.ui {
    class MenuHandler {
    - drawLine() : void
    + showMenu() : void
    + showHeader() : void
    }
  }
  package enums <<enums>> {
    enum MenuOptions {
      LISTAR
      CADASTRAR
      DELETAR
      ADICIONAR
      RETIRAR
      SAIR
    }
  }
  package services {
    class UserInputService {
      + getOption() : MenuOptions
      + getProduct() : Product
      + getProductItem() : ProductItem
      + getProductItemId() : Integer
      + getQuantity() : Integer
      + closeService() : void
    }
    class InputValidationService {
      + validateNumber<T extends Number>(value : String, tipo : Class<T>) : T
      + validateString String (value : String) : String
      + validateEnum<E extends Enum<E>>(value : String, tipo : Class<E>) : E
    }
  }
}

ProductItem --> "\t1" Product
Inventory "\t1" o-- "-productItems\n0..*" ProductItem
InventoryFileService ..> Inventory
Product ..> ProductCategory
UserInputService ..> MenuOptions
UserInputService ..> Product
UserInputService ..> ProductItem
UserInputService ..> InputValidationService
@enduml
